--- a/generic.html
+++ b/generic.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Information - CastleRaid</title>
+		<title>Information - Nitro Network</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -50,7 +50,7 @@
 							<div class="inner">
 
 								<h3>How to Play?</h3>
-								<p>Sum Ting here lul</p>
+								<p>If you wish to play on the Nitro Network you must first enter our ip, nitronetwork.ddns and our port, 19132. <section> Then you can join, upon joining we will have many menu's for you the player to ultilize and use. Tap the ground to begin command usage.</p>
 
 								<p>.</p>
 
