--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>CastleRaidPE</title>
+		<title>Nitro Network</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -41,9 +41,9 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>CastleRaid</h2>
+							<h2>Nitro Network</h2>
 							<p>A MC:BE Custom<br />
-							Kingdoms Server.<br />
+							Factions Server.<br />
 							Crafted by <a href="github.com">GitHub</a>.</p>
 							<ul class="actions">
 								<li><a href="#" class="button special">Activate</a></li>
@@ -56,10 +56,10 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>What is CastleRaid?<br />
-								More importantly what is Kingdoms?</h2>
-								<p>CastleRaid, is a server made by a group of people. Whos goal is the same, to make the best server!<br />
-								Kingdoms, is like Factions. Except theres wars, KOTHS, and even more check in-game! It is the royalty.</p>
+								<h2>What is the Nitro Network?<br />
+								More importantly why Nitro??</h2>
+								<p>We are Nitro powered, fast, clean, and fun most importantly.<br />
+								Factions, but Nitro. With better hosting, better plugins, and a better experience!</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
@@ -80,16 +80,16 @@
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Our Servers,<br />
+								<h2>Our Pardners,<br />
 								including servers registered as a Network:</h2>
-								<p>CastleRaidPE.tk:19132 (Kingdoms) Nitronetwork.tk (Factions) and VoltagePE</p>
+								<p>CastleRaidPE.tk:19132 (Kingdoms) NitroNetwork.ddns.net (Factions)</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
 								<h2>Meet the staff, in<br />
 								making your experience impeccable!</h2>
-								<p>Owners: QuiverlyRivalry, Dylandao Manager: OhhhAlex, Lead Developer: NickTehUnicorn (dm if i forgot u)</p>
+								<p>Ceo:iOSMiner COO: TBNRItzDoge CMO: OhhAlex ; Those are currently the excecutives of the Nitro Network1</p>
 							</div>
 						</section>
 					</section>
@@ -116,12 +116,12 @@
 									<p>(SOON)</p>
 								</li>
 								<li class="icon fa-headphones">
-									<h3>ForceCraft Hosting</h3>
-									<p>Buy a host from them with our code 'CastleRaid'!</p>
+									<h3>Ramshard</h3>
+									<p>Buy a server from them if you want a fast, lagg free server at a great price!</p>
 								</li>
 								<li class="icon fa-heart-o">
-									<h3>NitroNetwork</h3>
-									<p>(SOON))</p>
+									<h3>Castle Raid</h3>
+									<p>play.CastleRaidPE.</p>
 								</li>
 								<li class="icon fa-flag-o">
 									<h3>VoltagePE</h3>
