--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">CastleRaid</a></h1>
+						<h1><a href="index.html">Nitro Network</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -73,9 +73,9 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Features of CastleRaid<br />
+								<h2>Features of the Nitro Network<br />
 								BE, a new incoming server.</h2>
-								<p>We boast of our high quality hardware for a non lagg experience, custom plugins, KOTHs, Envoys, CEs, and our Custom Potions!</p>
+								<p>We boast of our top of the line staff team, server host, and experience, we have a non lagg experience, custom plugins, KOTHs, Envoys, CEs, and more!</p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -89,7 +89,7 @@
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
 								<h2>Meet the staff, in<br />
 								making your experience impeccable!</h2>
-								<p>Ceo:iOSMiner COO: TBNRItzDoge CMO: OhhAlex ; Those are currently the excecutives of the Nitro Network1</p>
+								<p>CEO:iOSMiner<section> COO: TBNRItzDoge<section> CMO: OhhAlex<section> Those are currently the excecutives of the Nitro Network1</p>
 							</div>
 						</section>
 					</section>
@@ -112,19 +112,19 @@
 									<p>(SOON).</p>
 								</li>
 								<li class="icon fa-code">
-									<h3>Forums</h3>
-									<p>(SOON)</p>
+									<h3>Nitro-Host</h3>
+									<p>Website In-Dev</p>
 								</li>
 								<li class="icon fa-headphones">
 									<h3>Ramshard</h3>
-									<p>Buy a server from them if you want a fast, lagg free server at a great price!</p>
+									<p>Buy a server from them if you want a fast, lagg free server at a great price! <section> Buy a server from them at ramshard.com!</p>
 								</li>
 								<li class="icon fa-heart-o">
 									<h3>Castle Raid</h3>
 									<p>play.CastleRaidPE.</p>
 								</li>
 								<li class="icon fa-flag-o">
-									<h3>VoltagePE</h3>
+									<h3>(SOON)</h3>
 									<p>(SOON)</p>
 								</li>
 							</ul>
@@ -136,7 +136,7 @@
 						<div class="inner">
 							<header>
 								<h2>Any Questions?</h2>
-								<p>DM on twitter @QuiverlyRivalry or @QuiverlyRivalry#4535</p>
+								<p>DM on twitter @TBNRItzDoge or @tbnritzdoge#2707</p>
 							</header>
 							<ul class="actions vertical">
 								<li><a href="#" class="button fit special">Up to top!</a></li>
@@ -155,7 +155,7 @@
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Version 0.0.1</li><li>Design: <a href="https://quiverlyrivalry.github.io">Test</a></li>
+							<li>&copy; Version 0.0.1</li><li>Design: <a href="https://quiverlyrivalry.github.io">Nitro</a></li>
 						</ul>
 					</footer>
 
