--- a/generic.html
+++ b/generic.html
@@ -44,7 +44,7 @@
 					<article id="main">
 						<header>
 							<h2>How to Play?</h2>
-							<p>The ultimate guide! To become the best King!</p>
+							<p>The ultimate guide on getting F-Top 1!</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
@@ -52,14 +52,14 @@
 								<h3>How to Play?</h3>
 								<p>If you wish to play on the Nitro Network you must first enter our ip, nitronetwork.ddns and our port, 19132. <section> Then you can join, upon joining we will have many menu's for you the player to ultilize and use. Tap the ground to begin command usage.</p>
 
-								<p>.</p>
+								<p></p>
 
 								<hr />
 
 								<h4>Tips and Tricks</h4>
-								<p>sum ting here.</p>
+								<p>Our most reccomended tip is to be active, play hard, and enjoy!</p>
 
-								<p>sum more ting</p>
+								<p></p>
 
 							</div>
 						</section>
