--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
+											<li><a href="generic.html">Info</a></li>
 											<li><a href="elements.html">Elements</a></li>
 											<li><a href="#">Sign Up</a></li>
 											<li><a href="#">Log In</a></li>
@@ -82,7 +82,7 @@
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
 								<h2>Our Pardners,<br />
 								including servers registered as a Network:</h2>
-								<p>CastleRaidPE.tk:19132 (Kingdoms) NitroNetwork.ddns.net (Factions)</p>
+								<p>CastleRaidPE.tk:19132 (Kingdoms)</p>
 							</div>
 						</section>
 						<section class="spotlight">
