--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="generic.html">Info</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="FAQ.html">FAQ</a></li>
+											<li><a href="#"></a></li>
+											<li><a href="#"></a></li>
 										</ul>
 									</div>
 								</li>
@@ -89,7 +89,7 @@
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
 								<h2>Meet the staff, in<br />
 								making your experience impeccable!</h2>
-								<p>CEO:iOSMiner<section> COO: TBNRItzDoge<section> CMO: OhhAlex<section> Those are currently the excecutives of the Nitro Network1</p>
+								<p>CEO:iOSMiner<section> COO: TBNRItzDoge<section> CMO: OhhAlex<section> Those are currently the excecutives of the Nitro Network!</p>
 							</div>
 						</section>
 					</section>
