--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="generic.html">Info</a></li>
-											<li><a href="FAQ.html">FAQ</a></li>
+											<li><a href="elements.html">FAQ</a></li>
 											<li><a href="#"></a></li>
 											<li><a href="#"></a></li>
 										</ul>
