--- a/elements.html
+++ b/elements.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Elements - Spectral by HTML5 UP</title>
+		<title>FAQ</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">Nitro Network</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -29,10 +29,10 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="generic.html">Info</a></li>
+											<li><a href="elements.html">FAQ</a></li>
+											<li><a href="#"></a></li>
+											<li><a href="#"></a></li>
 										</ul>
 									</div>
 								</li>
@@ -43,8 +43,8 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Elements</h2>
-							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
+							<h2>Hello, Welcome to the FAQ!</h2>
+							<p>This is where we answer your questions, give you info and make your gameplay on the Nitro Network marginallt better!</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
