--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="generic.html">Info</a></li>
-											<li><a href="elements.html">FAQ</a></li>
-											<li><a href="#"></a></li>
-											<li><a href="#"></a></li>
+											<li><a href="#">Join Today</a></li>
+											<li><a href="#">nitronetwork.ddns.net</a></li>
+											<li><a href="#">19132</a></li>
 										</ul>
 									</div>
 								</li>
