--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Version 0.0.1</li><li>Design: <a href="https://quiverlyrivalry.github.io">Nitro</a></li>
+							<li>&copy; Version 0.0.1, TBNRItzDoge</li><li>Design: <a href="https://twitter.com/tbnritzdoge">Nitro</a></li>
 						</ul>
 					</footer>
 
