--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Info</a></li>
-											<li><a href="#">Join Today</a></li>
-											<li><a href="#">nitronetwork.ddns.net</a></li>
-											<li><a href="#">19132</a></li>
+											<li><a href="index.html"><h1>Home</h1></a></li>
+											<li><a href="generic.html"><h1>Info</h1></a></li>
+											<li><a href="http://store.nnmcpe.net"><h1>Store</h1></a></li>
+											<li><a href="#"><h2>Join Today</h2></a></li>
+											<li><a href="#"><h3>nitronetwork.ddns.net>/h3></a></li>
+											<li><a href="#"><h3>19132</h3></a></li>
 										</ul>
 									</div>
 								</li>
