--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 										<ul>
 											<li><a href="index.html"><h1>Home</h1></a></li>
 											<li><a href="generic.html"><h1>Info</h1></a></li>
-											<li><a href="http://store.nnmcpe.net"><h1>Store</h1></a></li>
-											<li><a href="#"><h2>Join Today</h2></a></li>
-											<li><a href="#"><h3>nitronetwork.ddns.net>/h3></a></li>
-											<li><a href="#"><h3>19132</h3></a></li>
+											<li><a href="https://nitronstore.buycraft.net"><h1>Store</h1></a></li>
+											<li><a href="#">Join Today</a></li>
+											<li><a href="#">nitronetwork.ddns.net</a></li>
+											<li><a href="#">19132</a></li>
 										</ul>
 									</div>
 								</li>
