--- a/generic.html
+++ b/generic.html
@@ -28,8 +28,9 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Info</a></li>
+											<li><a href="index.html"><h1>Home</h1></a></li>
+											<li><a href="generic.html"><h1>Info</h1></a></li>
+											<li><a href="https://nitronstore.buycraft.net"><h1>Store</h1></a></li>
 											<li><a href="#">Join Today</a></li>
 											<li><a href="#">nitronetwork.ddns.net</a></li>
 											<li><a href="#">19132</a></li>
