--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Nitro Network</h2>
-							<p>A MC:BE Custom<br />
+							<p>A MC:PE Custom<br />
 							Factions Server.<br />
 							Crafted by <a href="https://github.com">GitHub</a>.</p>
 							<ul class="actions">
@@ -90,7 +90,7 @@
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
 								<h2>Meet the staff, in<br />
 								making your experience impeccable!</h2>
-								<p>CEO:iOSMiner<section>COO:TBNRItzDoge<section>CMO:OhhAlex<section>Those are currently the excecutives of the Nitro Network!</p>
+								<p>CEO: JustinFromMCPE<section>COO: TBNRItzDoge<section>CMO: OhhAlex<section>Those are currently the excecutives of the Nitro Network!</p>
 							</div>
 						</section>
 					</section>
