--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Version 0.0.1, TBNRItzDoge</li><li>Design: <a href="https://twitter.com/tbnritzdoge">Nitro</a></li>
+							<li>&copy; Version 0.0.1, Made by TBNRItzDoge with <strong>HTML and CSS</strong></li><li>Design: <a href="https://twitter.com/tbnritzdoge">Nitro</a></li>
 						</ul>
 					</footer>
 
