--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
 									<h3>Buycraft</h3>
-									<p>Donate to us, to help us keep up the good work! CastleRaid.buycraft.net </p>
+									<p>Donate to us, to help us keep up the good work! <a href="https://store.nnmcpe.net">Our Buycraft</a> </p>
 								</li>
 								<li class="icon fa-laptop">
 									<h3>Vote Link</h3>
@@ -118,7 +118,8 @@
 								</li>
 								<li class="icon fa-headphones">
 									<h3>Ramshard</h3>
-									<p>Buy a server from them if you want a fast, lagg free server at a great price! <section> Buy a server from them at ramshard.com!</p>
+									<p>Buy a server from them if you want a fast, lagg free server at a great price! <section> Buy a server from them at 
+									<a href="https://ramshard.com">ramshard.com1</a></p>
 								</li>
 								<li class="icon fa-heart-o">
 									<h3>Castle Raid</h3>
