--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
 									<h3>Buycraft</h3>
-									<p>Donate to us, to help us keep up the good work! <a href="https://store.nnmcpe.net">Our Buycraft</a> </p>
+									<p>Donate to us, to help us keep up the good work! <a href="https://nitronstore.buycraft.net">Our Buycraft</a> </p>
 								</li>
 								<li class="icon fa-laptop">
 									<h3>Vote Link</h3>
