--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 							</header>
 							<ul class="actions vertical">
 								<li><a href="#" class="button fit special">Up to top!</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="generic.html" class="button fit">Learn More</a></li>
 							</ul>
 						</div>
 					</section>
@@ -157,7 +157,7 @@
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Version 0.0.1, Made by TBNRItzDoge with <strong>HTML and CSS</strong></li><li>Design: <a href="https://twitter.com/tbnritzdoge">Nitro</a></li>
+							<li>&copy; Nitro Network, Made by TBNRItzDoge with <strong>HTML and CSS</strong></li><li>Design: <a href="https://twitter.com/tbnritzdoge">Nitro</a></li>
 						</ul>
 					</footer>
 
