--- a/index.html
+++ b/index.html
@@ -119,11 +119,12 @@
 								<li class="icon fa-headphones">
 									<h3>Ramshard</h3>
 									<p>Buy a server from them if you want a fast, lagg free server at a great price! <section> Buy a server from them at 
-									<a href="https://ramshard.com">ramshard.com1</a></p>
+									<a href="https://ramshard.com">ramshard.com
+									!</a></p>
 								</li>
 								<li class="icon fa-heart-o">
-									<h3>Castle Raid</h3>
-									<p>play.CastleRaidPE.</p>
+									<h3>(SOON)</h3>
+									<p>(SOON)</p>
 								</li>
 								<li class="icon fa-flag-o">
 									<h3>(SOON)</h3>
@@ -150,14 +151,14 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://twitter.com/NitroNetworkHQ" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Nitro Network, Made by TBNRItzDoge with <strong>HTML and CSS</strong></li><li>Design: <a href="https://twitter.com/tbnritzdoge">Nitro</a></li>
+							<li>&copy; Nitro Network, Made by <u>TBNRItzDoge</u> with <strong>HTML and CSS</strong></li><li>Design: <a href="https://twitter.com/tbnritzdoge">Nitro</a></li>
 						</ul>
 					</footer>
 
