--- a/generic.html
+++ b/generic.html
@@ -76,7 +76,7 @@
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Version 0.0.1</li><li>Design: <a href="http://google.com">WIP</a></li>
+							<li>&copy; Nitro Network, By <u>TBNRItzDoge</u> with <strong>HTML and CSS</strong></li><li>Design: <a href="http://google.com">WIP</a></li>
 						</ul>
 					</footer>
 
