--- a/generic.html
+++ b/generic.html
@@ -65,7 +65,8 @@
 							</div>
 						</section>
 					</article>
-				<h4>Form</h4>
+				h4{text-align:center;}
+				<h4>Nitro Network Contact/Support Form</h4>
 									<form method="post" action="#">
 										<div class="row uniform">
 											<div class="6u 12u$(xsmall)">
@@ -78,10 +79,10 @@
 												<div class="select-wrapper">
 													<select name="demo-category" id="demo-category">
 														<option value="">- Category -</option>
-														<option value="1">Manufacturing</option>
-														<option value="1">Shipping</option>
-														<option value="1">Administration</option>
-														<option value="1">Human Resources</option>
+														<option value="1">Bugs</option>
+														<option value="1">Buycraft</option>
+														<option value="1">Staff</option>
+														<option value="1">Other</option>
 													</select>
 												</div>
 											</div>
