--- a/generic.html
+++ b/generic.html
@@ -65,7 +65,10 @@
 							</div>
 						</section>
 					</article>
-				h4{text-align:center;}
+				h4 {
+    text-align: center;
+}
+
 				<h4>Nitro Network Contact/Support Form</h4>
 									<form method="post" action="#">
 										<div class="row uniform">
