--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							Factions Server.<br />
 							Crafted by <a href="https://github.com">GitHub</a>.</p>
 							<ul class="actions">
-								<li><a href="https://discord.gg/Dv4XhKT" class="button special">Join Our Discord</a></li>
+								<li><a href="https://discord.gg/Dv4XhKT" class="button special">Join Our Discord</a></li> <li><a href="https://nitronetwork.freshdesk.com" class="button special">Support Desk</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
