--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 										<ul>
 											<li><a href="index.html"><h1>Home</h1></a></li>
 											<li><a href="generic.html"><h1>Info</h1></a></li>
+											<li><a href="https://nitronetwork.freshdesk.com"><h1>Support</h1></a></li>
 											<li><a href="https://nitronstore.buycraft.net"><h1>Store</h1></a></li>
 											<li><a href="#">Join Today</a></li>
 											<li><a href="#">nitronetwork.ddns.net</a></li>
@@ -47,7 +48,7 @@
 							Factions Server.<br />
 							Crafted by <a href="https://github.com">GitHub</a>.</p>
 							<ul class="actions">
-								<li><a href="https://discord.gg/Dv4XhKT" class="button special">Join Our Discord</a></li> <li><a href="https://nitronetwork.freshdesk.com" class="button special">Support Desk</a></li>
+								<li><a href="https://discord.gg/Dv4XhKT" class="button special">Join Our Discord</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
