--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							Factions Server.<br />
 							Crafted by <a href="https://github.com">GitHub</a>.</p>
 							<ul class="actions">
-								<li><a href="https://discord.gg/Dv4XhKT" class="button special">Join Our Discord</a></li>
+								<li><a href="https://discord.gg/Dv4XhKT" class="button special">Join Our Discord</a></li> <li><a href="http://support.nnmcpe.net" class="button special">Support Portal</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
