--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Our Pardners,<br />
+								<h2>Our Partners<br />
 								including servers registered as a Network:</h2>
 								<p>CastleRaidPE.tk:19132 (Kingdoms)</p>
 							</div>
