--- a/generic.html
+++ b/generic.html
@@ -30,6 +30,7 @@
 										<ul>
 											<li><a href="index.html"><h1>Home</h1></a></li>
 											<li><a href="generic.html"><h1>Info</h1></a></li>
+											<li><a href="http://support.nnmcpe.net"><h1>Support</h1></a></li>
 											<li><a href="https://nitronstore.buycraft.net"><h1>Store</h1></a></li>
 											<li><a href="#">Join Today</a></li>
 											<li><a href="#">nitronetwork.ddns.net</a></li>
@@ -50,7 +51,7 @@
 						<section class="wrapper style5">
 							<div class="inner">
 
-								<h3>How to Play?</h3>
+								<h2>How to Play?</h2>
 								<p>If you wish to play on the Nitro Network you must first enter our ip, nitronetwork.ddns and our port, 19132. <section> Then you can join, upon joining we will have many menu's for you the player to ultilize and use. Tap the ground to begin command usage.</p>
 
 								<p></p>
