--- a/discord.html
+++ b/discord.html
@@ -1,1 +1,5 @@
-
+<html>
+  <title>Discord Server</title>
+  
+  <iframe src="https://discordapp.com/widget?id=368563197222846466&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+</html>
